# compiler

./: .gitignore  .pre-commit-config.yaml  README.md  README.md.license  add.wasm  pyproject.toml
ebnf_compiler/: __init__.py  ast0.py  parser.py  scanner.py  stat.py  tokens.py
ebnf_compiler/files/: algol60.ebnf  comment.ebnf  ebnf.ebnf  oberon0.ebnf
oberon0_compiler/: __init__.py  ast.py  scanner.py
oberon0_runtime/: __init__.py
scanner/: scanner.py
